# game

./: .gitignore  Dockerfile  LICENSE  docker-compose.main.yml  pyproject.toml
docs/tt/: logic.md  programming.md
env/nginx/: nginx.conf
src/: main.py
src/_types/: __init__.py  method_t.py
src/core/: __init__.py  config.py  depends.py  middlewares.py  tools.py
src/enums/: __init__.py  build.py  http.py
src/helpers/: __init__.py  request.py  url.py
src/helpers/pydantic/: __init__.py  update_forward_refs.py
src/schemas/: __init__.py
src/schemas/main/: __init__.py  service_info.py
src/utils/: __init__.py  unzip_data.py
src/utils/decorators/: _decorated.py  route.py
